feat: Phase 2 Wave 1 — services return entities, controllers map via mappers
Migrate Room, Group, Jury, Evaluation, TeacherUnavailability, User, and
UserAccount services to return entities instead of DTOs. Controllers now
inject MapStruct mappers (RoomMapper, GroupMapper, JuryMapper,
JuryMemberMapper, EvaluationMapper, UserMapper) and handle DTO conversion.

- RoomService: returns PaginatedResponse<Room>
- GroupService: returns List<Group>/Group entities
- JuryService: returns List<Jury>/Jury entities
- EvaluationService: returns List<Evaluation>/Evaluation entities
- TeacherUnavailabilityService: returns List<Unavailability>
- UserService: returns Page<User>/List<User>/User
- UserAccountService: returns User/List<User>
- New mappers: RoomMapper, GroupMapper, JuryMapper, JuryMemberMapper,
  EvaluationMapper
- CentralMapperConfig: adds nullValueMappingStrategy = RETURN_DEFAULT
- spotbugs-exclude: ignores NP_NULL_ON_SOME_PATH in mapper Impl classes
- Test updates for new return types and mapper mocks